<resources>
    <string name="app_name">QuanLyTienDien</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="input_text">Input Username</string>
    <string name="star">************</string>
    <string name="remember">Remember login</string>
    <string name="employee">Employee</string>
    <string name="customer">Customer</string>
    <string name="ep">EP</string>
    <string name="cs">CS</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="list_customer">List Customer</string>
    <string name="map">Map</string>

    <!-- Info Employee-->
    <string name="name">Name</string>
    <string name="Code">Code</string>
    <string name="id">ID</string>
    <string name="address">Address</string>
    <string name="birthday">Birth day</string>
    <string name="phone">Phone</string>
    <string name="position">Position</string>
    <!--Button-->
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="date">Date</string>
    <!--Oops-->
    <string name="delete_user">Delete User</string>
    <string name="Add_susscess">Add User Susscess</string>
    <string name="Update_completed">Update Completed</string>
    <string name="Delete_completed">Delete Completed</string>
    <string name="password_empty">Password can not be empty</string>
    <string name="password_invalid">Invalid Password</string>

    <string name="Add_error">Add Error</string>
    <string name="Update_error">Update Error</string>
    <string name="Delete_error">Delete Error</string>
    <string name="update_susscess">Update Success</string>
    <string name="user_exist">User Exist</string>

    <string name="number_home">Number home</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="list_customer_of">List Customer of </string>

    <!--String-->
    <string name="Title_Add_User">Add New User</string>
    <string name="Title_Update_Infomation">Update Infomation</string>
    <string name="electricity_meter">EM</string>
    <string name="select_date">Choose your birthday</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_susscess">Change Password Susscess</string>
    <string name="confirm_password_error">Confirm password incorrect</string>
    <string name="change_fail">Change Password Fail</string>
    <string name="edit_infomation">Edit Infomation</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you logout?</string>
    <string name="yes">YES</string>
    <string name="i_think_again">I Think Again</string>
    <!--Login-->
    <string name="user_password_empty">Username or Password is empty</string>
    <string name="user_password_invalid">Invalid username or password</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="select_day">Select day</string>
    <string name="cancel">Cancel</string>
    <string name="input_invalid">Invalid input data</string>

    <string name="old_number">Old Number</string>
    <string name="new_number">New Number</string>
    <string name="pay">Pay</string>
    <string name="infomation_number">Infomation Number</string>
    <string name="money">Money</string>

    <!--Server-->
    <string name="server_connect_error">Server Connect Error</string>

    <!-- Khu Vực -->
    <string name="ninhkieu">Ninh Kieu</string>
    <string name="binhthuy">Binh Thuy</string>
    <string name="codo">Co Do</string>
    <string name="thoilai">Thoi Lai</string>

    <!-- Tinh -->
    <string name="cantho">TP. Can Tho</string>
    <string name="hcm">TP. HCM</string>
    <string name="haugiang">Hau Giang</string>

    <!-- Thang -->
    <string name="month_1">JAN</string>
    <string name="month_2">FEB</string>
    <string name="month_3">MAR</string>
    <string name="month_4">APR</string>
    <string name="month_5">MAY</string>
    <string name="month_6">JUN</string>
    <string name="month_7">JUL</string>
    <string name="month_8">AUG</string>
    <string name="month_9">SEP</string>
    <string name="month_10">OCT</string>
    <string name="month_11">NOV</string>
    <string name="month_12">DEC</string>

    <!-- Language -->
    <string name="language">Language</string>

    <string name="not_show_location">Can not show location. Did you enable location on your device?</string>
</resources>
