<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navAccount"
            android:icon="@drawable/ic_person_white_24dp"
            android:title="@string/account" />
        <item
            android:id="@+id/navChangePassword"
            android:icon="@drawable/ic_update_white_24dp"
            android:title="@string/change_password" />
    </group>

    <item android:title="Cities">
        <menu>
            <item
                android:id="@+id/navCanTho"
                android:icon="@drawable/ic_local_library_white_24dp"
                android:title="@string/cantho" />
            <item
                android:id="@+id/navHauGiang"
                android:icon="@drawable/ic_local_library_white_24dp"
                android:title="@string/haugiang" />
            <item
                android:id="@+id/navHCM"
                android:icon="@drawable/ic_local_library_white_24dp"
                android:title="@string/hcm" />
        </menu>
    </item>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/navLanguage"
                android:icon="@drawable/ic_translate_white_24dp"
                android:title="@string/language" />
            <item
                android:id="@+id/navLogout"
                android:icon="@drawable/ic_person_outline_white_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
