<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingRight="10dp"
    android:weightSum="1"
    tools:context="ctu.tmtai.com.quanlytiendien.AddUserActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.54"
        android:gravity="center"
        android:text="@string/Title_Add_User"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/employee" />

        <RadioButton
            android:id="@+id/rdCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/customer" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="50dp"

            android:layout_height="match_parent"
            android:layout_weight="0.14"
            android:gravity="left|center"
            android:text="@string/Code"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCodeUser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_weight="0.11" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/electricity_meter"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtElectricityUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_weight="0.54" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8.58"
            android:text="@string/name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5.43"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="102.60"
            android:text="@string/birthday"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtBirthdayUser"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_weight="86.56"
            android:ems="10"
            android:hint="1/1/1990"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/btnBirthdayUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:backgroundTint="@android:color/holo_blue_dark"
            app:srcCompat="@drawable/ic_add_alarm_white_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:text="@string/address"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtAddressUserNumber"
                android:layout_width="267dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/number_home"
                android:inputType="textPersonName" />

            <AutoCompleteTextView
                android:id="@+id/txtAddressUserDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/district" />

            <AutoCompleteTextView
                android:id="@+id/txtAddressUserCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="12.85"
            android:text="@string/id"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtIdUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_weight="6.09" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9.33"
            android:text="@string/phone"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtPhoneUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5.34"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingRight="10dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rdFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/female" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnAddUser"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                app:backgroundTint="@android:color/holo_blue_dark"
                app:elevation="0dp"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_add_white_24dp" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnClearUser"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0.13"
            android:clickable="true"
            app:elevation="0dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_clear_white_24dp" />

    </LinearLayout>
</LinearLayout>
